--- a/app/index.html
+++ b/app/index.html
@@ -1,10 +1,34 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" ng-app="">
 <head>
     <meta charset="UTF-8">
-    <title></title>
+    <title>Contacts Manager</title>
+    <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
+    <script type="text/javascript" src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="bower_components/jquery/dist/jquery.min.js"></script>
+
+    <script type="text/javascript" src="bower_components/angular/angular.min.js"></script>
 </head>
 <body>
+    <nav class="navbar navbar-default" role="navigation">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#nav-toggle">
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="/">Contacts Manager</a>
+        </div>
 
+        <div class="collapse navbar-collapse" id="nav-toggle">
+            <ul class="nav navbar-nav">
+                <li class="active"><a href="/">Browse</a></li>
+                <li><a href="/add">Add Contact</a></li>
+            </ul>
+            <form class="navbar-form navbr-right" role="search">
+                <input type="text" class="form-control" placeholder="Search">
+            </form>
+        </div>
+    </nav>
 </body>
 </html>
