--- a/app/index.html
+++ b/app/index.html
@@ -45,7 +45,7 @@
         <div class="container">
             <div class="row">
                 <span class="col-xs-12 main-footer">Saddleback Community College - Society of American Military Engineers</span>
-                <span class="col-xs-12 main-footer">Web Application Developed and Maintained by Dan Karlsson</span>
+                <span class="col-xs-12 main-footer">Web Application Developed and Maintained by Dan Karlsson 2015</span>
             </div>
         </div>
     </footer>
