Added photo gallery

--- a/app/index.html
+++ b/app/index.html
@@ -32,6 +32,7 @@
                 <li class="active"><a href="/">Home</a></li>
                 <li><a ui-sref="contact">Contact</a></li>
                 <li><a ui-sref="login">Login</a></li>
+                <li><a ui-sref="gallery">Photo Gallery</a></li>
             </ul>
             <form class="navbar-form navbr-right" role="search">
                 <input type="text" class="form-control" placeholder="Search">
