Added another photo, need to get a repo for hosting just the images.

--- a/app/index.html
+++ b/app/index.html
@@ -30,7 +30,7 @@
         <div class="collapse navbar-collapse" id="nav-toggle">
             <ul class="nav navbar-nav">
                 <li class="active"><a href="/">Home</a></li>
-                <li><a ui-sref="contact">Contact</a></li>
+                <li><a ui-sref="about">About Us</a></li>
                 <li><a ui-sref="login">Login</a></li>
                 <li><a ui-sref="gallery">Photo Gallery</a></li>
             </ul>
