--- a/app/index.html
+++ b/app/index.html
@@ -31,8 +31,9 @@
             <ul class="nav navbar-nav">
                 <li class="active"><a href="/">Home</a></li>
                 <li><a ui-sref="about">About Us</a></li>
-                <li><a ui-sref="login">Login</a></li>
                 <li><a ui-sref="gallery">Photo Gallery</a></li>
+                <li><a ui-sref="calendar">Calendar</a></li>
+                <li><a ui-sref="login">Login</a></li>
             </ul>
             <form class="navbar-form navbr-right" role="search">
                 <input type="text" class="form-control" placeholder="Search">
