--- a/app/index.html
+++ b/app/index.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Saddleback SAME</title>
-    <link rel="icon" href="bower_components/bootstrap/dist/fonts/glyphicons-halflings-regular.svg">
-    <link rel="stylesheet" type="text/css" href="bower_components/angular-material/angular-material.min.css">
+    <link rel="icon" href="vendor/glyphicons-halflings-regular.svg">
+    <link rel="stylesheet" type="text/css" href="vendor/angular-material.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=RobotoDraft:300,400,500,700,400italic">
-    <link rel="stylesheet" type="text/css" href="bower_components/angular-bootstrap/ui-bootstrap-csp.css">
-    <link rel="stylesheet" type="text/css" href="bower_components/bootstrap/dist/css/bootstrap-theme.min.css">
-    <link rel="stylesheet" type="text/css" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="bower_components/angular-ui/build/angular-ui.min.css">
+    <link rel="stylesheet" type="text/css" href="vendor/ui-bootstrap-csp.css">
+    <link rel="stylesheet" type="text/css" href="vendor/bootstrap-theme.min.css">
+    <link rel="stylesheet" type="text/css" href="vendor/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="vendor/angular-ui.min.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body class="background-page">
@@ -53,18 +53,19 @@
     </footer>
 
 
-    <script src="bower_components/angular/angular.js"></script>
-    <script src="bower_components/jquery/dist/jquery.min.js"></script>
-    <script src="bower_components/angular-ui/build/angular-ui.min.js"></script>
-    <script src="bower_components/angular-messages/angular-messages.min.js"></script>
-    <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script src="bower_components/firebase/firebase.js"></script>
-    <script src="bower_components/angularfire/dist/angularfire.min.js"></script>
-    <script src="bower_components/angular-aria/angular-aria.min.js"></script>
-    <script src="bower_components/angular-animate/angular-animate.min.js"></script>
-    <script src="bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
-    <script src="bower_components/angular-bootstrap/ui-bootstrap.min.js"></script>
-    <script src="bower_components/angular-material/angular-material.min.js"></script>
+    <script src="vendor/angular.min.js"></script>
+    <script src="vendor/jquery.min.js"></script>
+    <script src="vendor/angular-ui.min.js"></script>
+    <script src="vendor/angular-messages.min.js"></script>
+    <script src="vendor/bootstrap.min.js"></script>
+    <script src="vendor/firebase.js"></script>
+    <script src="vendor/angularfire.min.js"></script>
+    <script src="vendor/angular-aria.min.js"></script>
+    <script src="vendor/angular-animate.min.js"></script>
+    <script src="vendor/angular-ui-router.min.js"></script>
+    <script src="vendor/ui-bootstrap.min.js"></script>
+    <script src="vendor/ui-bootstrap-tpls.min.js"></script>
+    <script src="vendor/angular-material.min.js"></script>
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
 </body>
