Working on the authentication service with firebase. Checking out a new branch for this service.

--- a/app/index.html
+++ b/app/index.html
@@ -68,5 +68,7 @@
     <script src="vendor/angular-material.min.js"></script>
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
+    <script src="same.js"></script>
+    <script src="same.directives.js"></script>
 </body>
 </html>
