--- a/app/index.html
+++ b/app/index.html
@@ -66,6 +66,7 @@
     <script src="vendor/ui-bootstrap.min.js"></script>
     <script src="vendor/ui-bootstrap-tpls.min.js"></script>
     <script src="vendor/angular-material.min.js"></script>
+    <script src="vendor/angular-md5.min.js"></script>
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
     <script src="same.js"></script>
